# appwrite-sdk-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/: account.rs  databases.rs  storage.rs
src/: client.rs  error.rs  input_file.rs  lib.rs  permission.rs  query.rs
src/enums/: authentication_factor.rs  authenticator_type.rs  browser.rs  compression.rs  credit_card.rs  flag.rs  image_format.rs  image_gravity.rs  index_type.rs  mod.rs  oauth_provider.rs  relationship_type.rs  runtime.rs
src/services/: account.rs  avatars.rs  databases.rs  functions.rs  graphql.rs  health.rs  locale.rs  messaging.rs  mod.rs  sites.rs  storage.rs  teams.rs  tokens.rs  users.rs
tests/: integration_test.rs
